fix footer alignment

--- a/src/layout/Footer/Footer.css
+++ b/src/layout/Footer/Footer.css
@@ -1,7 +1,7 @@
 footer {
     background-color: lightgray;
     text-align: center;
-    padding: 5px 20px;
+    padding: 5px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
